# rna-kit

./: README.md  pyproject.toml
.github/: release-body.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: assessment-reference.md  core-concepts.md  getting-started.md  index.md  platform-support.md  tooling-and-api.md  workflows-and-benchmarking.md
examples/: basic_usage.py
examples/data/: 14_BujnickiPreExp_2.pdb.cssr  14_ChenPostExp_2.fasta  14_ChenPostExp_2.pdb.cssr  14_solution_0.fasta  14_solution_0.pdb.cssr  PZ14Bound_solution_4.pdb.cssr
examples/golden/: README.md
src/RNA_normalizer/: __init__.py
src/rna_kit/: __init__.py  alignment.py  api.py  arena.py  benchmark.py  cli.py  exceptions.py  extraction.py  mc_annotate.py  metrics.py  normalization.py  reports.py  resources.py  secondary_structure.py  secondary_structure_web.py  sequence_hints.py  structures.py  tools.py  usalign.py
src/rna_kit/data/: atoms.list
tests/: test_alignment.py  test_arena.py  test_cli.py  test_mc_annotate.py  test_metrics.py  test_normalization.py  test_package_alias.py  test_real_tools.py  test_reports.py  test_secondary_structure.py  test_tools.py  test_usalign.py
